# canu

./: .coveragerc  .dockerignore  .flake8  .gitignore  .version  Cray Inc - Gamora B26.xlsx  Dockerfile  Dockerfile.canu  Dockerfile.canu-inventory  Dockerfile.devel  Dockerfile.prod  Jenkinsfile  Jenkinsfile.github  LICENSE  MANIFEST.in  Makefile  Makefile_image  README.md  canu-debug  canu-devel  canu-docker  canu-prod  canu.rpm.spec  canu.spec  canu.yaml  canu_docker.sh  canuctl  canud  cdu-01.cfg  docker-compose.yaml  entry_points.ini  gamora-ccj.json  hook-nornir.py  hook-ttp-runtime.py  hook-ttp.py  hook.py  index.html  mkdocs.yml  noxfile.py  pyinstaller.py  (+13 more)
.devcontainer/: Dockerfile
.github/: CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  rfe.md
.github/workflows/: docs.yml  hadolint.yml  lint.yml  promote-prerelease.yml  promote-release.yml  shellcheck.yml  shellspec.yml  tests.yml  unittests.yml
1.7.0/: 404.html  index.html  sitemap.xml
1.7.0/backup/: index.html
1.7.0/cache/: index.html
1.7.0/canu_inventory/: index.html
1.7.0/container_install/: index.html
1.7.0/examples_output/: index.html
1.7.0/generate/: index.html
1.7.0/init/: index.html
1.7.0/lags/: index.html
1.7.0/network_configuration_and_upgrade/: index.html
1.7.0/nox_testing/: index.html
1.7.0/paddle/: index.html
1.7.0/quickstart/: index.html
1.7.0/releasing/: index.html
1.7.0/report/: index.html
1.7.0/rpm_install/: index.html
1.7.0/search/: search_index.json
1.7.0/send_command/: index.html
1.7.0/test_network/: index.html
1.7.0/uninstallation/: index.html
1.7.0/validate/: index.html
1.7.0/versioning/: index.html
1.7.1.post1/: 404.html  index.html  sitemap.xml
1.7.1.post1/backup/: index.html
1.7.1.post1/cache/: index.html
1.7.1.post1/canu_inventory/: index.html
1.7.1.post1/container_install/: index.html
1.7.1.post1/examples_output/: index.html
1.7.1.post1/generate/: index.html
1.7.1.post1/init/: index.html
1.7.1.post1/lags/: index.html
1.7.1.post1/network_configuration_and_upgrade/: index.html
1.7.1.post1/nox_testing/: index.html
1.7.1.post1/paddle/: index.html
1.7.1.post1/quickstart/: index.html
1.7.1.post1/releasing/: index.html
1.7.1.post1/report/: index.html
1.7.1.post1/rpm_install/: index.html
1.7.1.post1/search/: search_index.json
1.7.1.post1/send_command/: index.html
1.7.1.post1/test_network/: index.html
1.7.1.post1/uninstallation/: index.html
1.7.1.post1/validate/: index.html
1.7.1.post1/versioning/: index.html
1.7.4/: 404.html  index.html
1.7.4/backup/: index.html
1.7.4/cache/: index.html
1.7.4/canu_inventory/: index.html
1.7.4/container_install/: index.html
1.7.4/examples_output/: index.html
1.7.4/generate/: index.html
1.7.4/init/: index.html
1.7.4/lags/: index.html
1.7.4/network_configuration_and_upgrade/: index.html
1.7.4/nox_testing/: index.html
1.7.4/paddle/: index.html
1.8.1/: 404.html  index.html
1.9.6/: 404.html  extra.css  index.html
1.9.7/: 404.html  index.html
NetworkModels/: cray-network-hardware.yaml
canu/: .version  __init__.py  cache.py  canu-devel  canu.yaml  cli.py
docs/: backup_network.md  canu_inventory.md  config_bgp.md  create_new_csm_version.md  extra.css  generate_network_config.md  generate_switch_config.md  index.md  init.md  install.md  installation.md  lags.md  network_cabling.md  network_config.md  network_firmware.md  nox_testing.md  quickstart.md  releasing.md  report_network_cabling.md  report_network_firmware.md  report_network_version.md  report_switch_cabling.md  report_switch_firmware.md  rpm_install.md  send_command.md  switch_cabling.md  switch_config.md  switch_firmware.md  test_network.md  validate_bgp.md  validate_cabling.md  validate_network_bgp.md  validate_network_cabling.md  validate_network_config.md  validate_paddle.md  validate_paddle_cabling.md  validate_shcd.md  validate_shcd_cabling.md  validate_switch_config.md  versioning.md
latest/: 404.html  index.html
network_modeling/: NetworkDrawing.py  NetworkModel.py  NetworkNode.py  NetworkNodeFactory.py  NetworkPort.py  NodeLocation.py  __init__.py  mac_vendors
network_models/: cray-network-architecture.yaml
pyinstaller_hooks/: hook-netutils.py  hook-nornir.py  hook-ttp.py  hook-yamale.py
schema/: cray-network-architecture-schema.yaml
shcd/: HmnRow.py  __init__.py
spec/: backup_network_spec.sh  backup_spec.sh  banner.md  cache_spec.sh  config_spec.sh  generate_spec.sh  init_spec.sh  integration_spec.sh  report_spec.sh  spec_helper.sh  test_spec.sh  validate_spec.sh  version_spec.sh
tests/: __init__.py  app.py  conftest.py  get_running_version.py  integration.sh  main.py  my_nos.py  my_nos.yaml  test_ansible.py  test_app.py  test_backup_network.py  test_cache.py  test_cli.py  test_config_bgp.py  test_config_network.py  test_config_pvlan.py  test_generate_network_config.py  test_generate_network_config_aruba.py  test_generate_network_config_aruba_csm_1_0.py  test_generate_network_config_aruba_csm_1_2.py  test_generate_network_config_dellanox.py  test_generate_network_config_dellanox_csm_1_0.py  test_generate_network_config_dellanox_csm_1_2.py  test_generate_switch_config.py  test_generate_switch_config_arista_csm_1_2.py  test_generate_switch_config_aruba.py  test_generate_switch_config_aruba_cli_csm_1_5.py  test_generate_switch_config_aruba_cli_csm_1_7.py  test_generate_switch_config_aruba_configs_csm_1_5.py  test_generate_switch_config_aruba_configs_csm_1_6.py  test_generate_switch_config_aruba_configs_csm_1_7.py  test_generate_switch_config_aruba_configs_csm_1_7_ipv6.py  test_generate_switch_config_aruba_csm_1_0.py  test_generate_switch_config_aruba_csm_1_2.py  test_generate_switch_config_aruba_csm_1_5.py  test_generate_switch_config_aruba_templates_csm_1_7.py  test_generate_switch_config_dellanox.py  test_generate_switch_config_dellanox_csm_1_0.py  test_generate_switch_config_dellanox_csm_1_0.py.old  test_generate_switch_config_dellanox_csm_1_2.py  (+32 more)
(+1407 files in other folders)
