#
# MIT License
#
# (C) Copyright 2023 Hewlett Packard Enterprise Development LP
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the 'Software'),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
# OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
# ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
# OTHER DEALINGS IN THE SOFTWARE.
#
[project]
name = 'canu'
authors = [
    { name = 'Jacob Salmela', email = 'jacob.salmela@hpe.com'},
    { name = 'Lucas Bates', email = 'lucas.bates@hpe.com' },
    { name = 'Sean Lynn', email = 'sean.lynn@hpe.com' },
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.12',
]
description = 'CSM Automatic Network Utility'
dependencies = [
    'aiohttp',
    'click-help-colors',
    'click-option-group',
    'click-params',
    'click-spinner',
    'click',
    'colorama',
    'emoji',
    'hier-config',
    'ipython',
    'jinja2',
    'jsonschema',
    'kubernetes',
    'mac-vendor-lookup',
    'natsort',
    'netaddr',
    'netmiko',
    'netutils',
    'nornir-netmiko',
    'nornir-salt',
    'nornir-scrapli',
    'nornir-utils',
    'nornir',
    'openpyxl',
    'pyyaml',
    'requests',
    'responses',
    'ruamel.yaml',
    'setuptools',
    'tabulate',
    'tokenize-rt',
    'tomli',
    'ttp',
    'urllib3',
    'yamale',
]
dynamic = ['entry-points', 'scripts', 'version']
maintainers = [
    { name = 'Russell Bunch', email = 'doomslayer@hpe.com'}
]
requires-python = '>=3.12'

[metadata]
url = 'https://github.com/Cray-HPE/canu'

license = { file = 'LICENSE' }

[project.optional-dependencies]
ci = [
    'nox',
]
docs = [
    'myst-parser',
    'sphinx',
    'sphinx-click',
    'sphinx-markdown-builder',
    'mike',
    'mkdocs',
    'mkdocs-material',
    'mkdocs-material-extensions',
]
lint = [
    'darglint',
    'flake8',
    'flake8-black',
    'flake8-bugbear',
    'flake8-commas',
    'flake8-comprehensions',
    'flake8-debugger',
    'flake8-docstrings',
    'flake8-eradicate',
    'flake8-import-order',
    'flake8-quotes',
    'flake8-string-format',
    'pep8',
    'pep8-naming',
    'toml',
]
network_modeling = [
    'jsonschema',
    'yamale',
]
test = [
    'coverage',
    'mock',
    'py',
    'pytest',
    'pytest-cov',
    'pytest-sugar',
    'testfixtures',
]

# Defines which folders belong to our package.
[tool.setuptools.packages.find]
include = ["canu*", "network_modeling*"]
exclude = ["canu.tests*"]

[tool.setuptools.dynamic]
entry-points = { file = ['entry_points.ini'] }
readme = { file = ['README.md'], content-type = 'text/markdown' }

# Allows for dynamic versioning via git-tag.
[tool.setuptools_scm]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'setuptools_scm[toml]',
    'wheel',
]

[tool.distutils.bdist_wheel]
universal = false # This app. is not compatible with Python2.
