#
# MIT License
#
# (C) Copyright 2023 Hewlett Packard Enterprise Development LP
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the 'Software'),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
# OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
# ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
# OTHER DEALINGS IN THE SOFTWARE.
#
[project]
name = 'canu'
authors = [
    { name = 'Jacob Salmela', email = 'jacob.salmela@hpe.com'},
    { name = 'Lucas Bates', email = 'lucas.bates@hpe.com' },
    { name = 'Sean Lynn', email = 'sean.lynn@hpe.com' },
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
description = 'CSM Automatic Network Utility'
dependencies = [
    'aiohttp==3.10.10',
    'click-help-colors==0.9.4',
    'click-option-group==0.5.6',
    'click-params==0.5.0',
    'click-spinner==0.1.10',
    'click==8.1.7',
    'colorama==0.4.6',
    'emoji==2.5.0',
    'hier-config==2.2.3',
    'ipython==8.14.0',
    'jinja2==3.1.4',
    'jsonschema==4.23.0',
    'kubernetes==31.0.0',
    'mac-vendor-lookup==0.1.12',
    'natsort==8.3.1',
    'netaddr==1.3.0',
    'netmiko==4.4.0',
    'netutils==1.10.0',
    'nornir-netmiko==1.0.1',
    'nornir-salt==0.19.2',
    'nornir-scrapli==2023.1.30.post1',
    'nornir-utils==0.2.0',
    'nornir==3.3.0',
    'openpyxl==3.1.5',
    'pyyaml==6.0.2',
    'requests==2.32.3',
    'responses==0.25.3',
    'ruamel.yaml<0.18.7',
    'tabulate==0.9.0',
    'tokenize-rt==6.1.0',
    'tomli==2.0.2',
    'ttp==0.9.5',
    'urllib3==2.2.3',
    'yamale<=5.2.1',
]
dynamic = ['entry-points', 'scripts', 'version']
maintainers = [
    { name = 'Russell Bunch', email = 'doomslayer@hpe.com'}
]
requires-python = '>=3.9'

[metadata]
url = 'https://github.com/Cray-HPE/canu'

license = { file = 'LICENSE' }

[project.optional-dependencies]
ci = [
    'nox~=2024.10.9',
]
docs = [
    'mike~=2.1.3',
    'mkdocs-material-extensions~=1.3.1',
    'mkdocs-material~=9.5.36',
    'mkdocs~=1.6.1',
    'myst-parser~=4.0.0',
    'sphinx-click~=6.0.0',
    'sphinx-markdown-builder~=0.6.7',
    'sphinx~=6.1.3',
]
lint = [
    'darglint~=1.8.1',
    'flake8-black~=0.3.6',
    'flake8-bugbear~=23.3.12',
    'flake8-commas~=4.0.0',
    'flake8-comprehensions~=3.12.0',
    'flake8-debugger~=4.1.2',
    'flake8-docstrings~=1.7.0',
    'flake8-eradicate~=1.5.0',
    'flake8-import-order~=0.18.2',
    'flake8-quotes~=3.4.0',
    'flake8-string-format==0.3.0',
    'flake8~=7.1.1',
    'pep8-naming~=0.13.2',
    'pep8~=1.7.1',
    'toml~=0.10.2',
]
network_modeling = [
    'jsonschema==4.23.0',
    'yamale<=5.2.1',
]
test = [
    'coverage~=7.6.4',
    'mock~=5.1.0',
    'pytest-cov~=4.1.0',
    'pytest-sugar~=1.0.0',
    'pytest~=8.3.3',
    'py~=1.11.0',
    'testfixtures~=8.3.0',
]

# Defines which folders belong to our package.
[tool.setuptools.packages.find]
include = ["canu*", "network_modeling*"]
exclude = ["canu.tests*"]

[tool.setuptools.dynamic]
entry-points = { file = ['entry_points.ini'] }
readme = { file = ['README.md'], content-type = 'text/markdown' }

# Allows for dynamic versioning via git-tag.
[tool.setuptools_scm]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools ~= 66.0',
    'setuptools_scm[toml] ~= 7.1.0',
    'wheel ~= 0.38.4',
]

[tool.distutils.bdist_wheel]
universal = false # This app. is not compatible with Python2.
